--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio • Nazar Kokovkin</title>
-  <meta name="description" content="Modern, stylish portfolio of Your Name — projects, experience, and contact." />
+  <meta name="description" content="Modern, stylish portfolio of Nazar Kokovkin — projects, experience, and contact." />
   <meta name="theme-color" content="#0ea5e9" />
   <!-- Open Graph -->
   <meta property="og:title" content="Nazar Kokovkin — Portfolio" />
@@ -444,3 +444,4 @@
   -->
 </body>
 </html>
+
