--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           <small class="muted">Code readability and scalability</small>
         </div>
         <div class="skill-card reveal">
-          <strong>Front‑End</strong>
+          <strong>Full-Stack</strong>
           <div class="meter" aria-hidden="true"><span style="--w:95%"></span></div>
           <small class="muted">React, Javascript, performance</small>
         </div>
@@ -321,7 +321,7 @@
         <div class="timeline">
           <div class="t-item reveal">
             <div class="t-card">
-              <strong>Senior Front‑End Engineer • Acme Co</strong>
+              <strong>Fullstack Engineer • Acme Co</strong>
               <div class="t-meta">2022 — Present</div>
               <p class="muted">Led the design system and shipped a new dashboard that improved time‑to‑insight by 30%.</p>
             </div>
@@ -444,6 +444,7 @@
   -->
 </body>
 </html>
+
 
 
 
