--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <div class="stat"><strong>40+</strong><span class="muted">Projects shipped</span></div>
           <div class="stat"><strong>15</strong><span class="muted">Happy clients</span></div>
         </div>
-        <h1 class="reveal">Designer & Fullstack Engineer crafting delightful web experiences.</h1>
+        <h1 class="reveal">Designer & Fullstack Engineer crafting great web experiences.</h1>
         <p class="reveal">I blend thoughtful UX with clean, performant code. Currently focused on design systems, accessibility, and fancy micro‑interactions.
         </p>
         <div class="hero-cta reveal">
@@ -444,6 +444,7 @@
   -->
 </body>
 </html>
+
 
 
 
